--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Lastminute</title>
+  <title><%= full_title(yield(:title)) %></title>	
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+
+<%= render 'layouts/shim' %>
 </head>
+
 <body>
+	
+	<%= render 'layouts/header' %>
 
-<%= yield %>
-
+	<div class="container-fluid">
+  		<div class="row-fluid">
+    		<div class="span2">
+      			Sidebar content
+    		</div>
+    
+    		<div class="span10">
+    	 		<%= yield %>
+				<%= render 'layouts/footer' %>
+    		</div>
+  		</div>
+	</div>
 </body>
 </html>
