--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,7 +8,7 @@
 		</h2>
 
 	<div class="well">
-		<%= link_to t(:signup), signup_path, class: "btn btn-large btn-primary" %>
+		<%= link_to t(:signup), new_user_registration_path, class: "btn btn-large btn-primary" %>
 		Why SignUp?
 		benefits
 	</div>	
