--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,11 @@
     		</div>
     
     		<div class="span10">
+        
+              <% flash.each do |key, value| %>
+            <div class="alert alert-<%= key %>"><%= value %></div>
+          <% end %>
+
     	 		<%= yield %>
 				<%= render 'layouts/footer' %>
     		</div>
