--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,5 +1,7 @@
 <% title "New Project" %>
 
+<h3> Create a new Project </h3>
+
 <%= render 'form' %>
 
 <p><%= link_to "Back to List", projects_path %></p>
